refactor: ReOrganizacion de responsabilidades para componente y servicios  [Ivo Vicencio]

--- a/NumeroPrimo/index.html
+++ b/NumeroPrimo/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <h1>Desafio Numero Primo</h1>
-    <input id="txtNumero" type="number" placeholder="Digite um número">
+    <input id="txtNumero" type="number" placeholder="Digite un número">
     <button id="btnValidarPrimo">Verificar</button>
     <p id="resultado"></p>
     <script type="module" src="./js/main.js"></script>
